# ctc_py

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODEBASE_ANALYSIS.md  README.md  ctrader_client.py  pyproject.toml  test_fetch.py
examples/: _bootstrap.py  auth_account.py  debug_conversions.py  debug_ctrader_client.py  historical_data.py  market_data_subscriptions.py  order_management.py  place_order.py  position_management.py  stream_spots.py  symbols_info.py
src/ctc_py/: __init__.py  account.py  client.py  constants.py  errors.py  events.py  models.py  normalize.py  proto.py  symbol.py  utils.py
src/ctc_py/protos/: OpenApiCommonMessages_pb2.py  OpenApiMessages_pb2.py  __init__.py
tests/: test_client_margin_guard.py  test_constants.py  test_ctrader_client_methods.py  test_errors.py  test_events.py  test_models_and_account.py  test_normalize.py  test_proto.py  test_rate_limit.py  test_utils.py  verify_imports.py
