[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctc-py"
version = "0.1.0"
description = "Async Python client for the cTrader Open API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "ctc_py contributors" }]
keywords = ["ctrader", "trading", "openapi", "forex", "cfd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "websockets>=13.0",
    "protobuf>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "grpcio-tools>=1.60",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ctc_py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
